--- a/_includes/post.html
+++ b/_includes/post.html
@@ -14,7 +14,7 @@
                 </div>
                 <p id="bgm"></p>
 <script>
-function  Function(){
+function  Funtion(){
   arrMusicID = [1091088,27471609,26875199,27723552,26090100,26090100,26193921,501467597,19282045,306709,5299097,27471615,31062378,139443];  //musicID array
   musicID = Math.floor(Math.random()*(arrMusicID.length)) //get a ran num as index
   $('body').css('height',document.documentElement.clientHeight -5);
