--- a/_includes/archives.html
+++ b/_includes/archives.html
@@ -87,6 +87,14 @@
                                 </div>
                             </li>
                             
+                       <li class="ant-timeline-item">
+                                <div class="ant-timeline-item-content">
+                                    <span class="badge badge-primary">2019-07-03 </span>
+                                    <div class="d-flex align-items-center post-title">
+                                        <a class="post-link h5 text-primary" href="/%E7%94%9F%E6%B4%BB%E9%9A%8F%E7%AC%94/2019/07/03/%E5%86%8D%E7%9C%8B-%E5%A3%AB%E5%85%B5%E7%AA%81%E5%87%BB.html">再看《士兵突击》</a>
+                                     </div>
+                                </div>
+                            </li>
                         <div class="page-header" id="archives">
                             <h4><strong>技术日志</strong></h4>
                         </div>
